--- a/arch/arm64/boot/dts/qcom/sdm845-db845c.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-db845c.dts
@@ -260,6 +260,18 @@
 
 		vin-supply = <&vbat_som>;
 	};
+
+	/*
+	 * The db845c doesn't actually have a battery, but the charger circuitry
+	 * is still wired up to support one, it needs to be programmed for nominal
+	 * vbat voltage. See the vbat-regulator above.
+	 */
+	battery: battery {
+		compatible = "simple-battery";
+
+		voltage-min-design-microvolt = <4200000>;
+		voltage-max-design-microvolt = <4200000>;
+	};
 };
 
 &adsp_pas {
@@ -657,6 +669,12 @@
 		function = LED_FUNCTION_INDICATOR;
 		function-enumerator = <1>;
 	};
+};
+
+&pmi8998_charger {
+	status = "okay";
+
+	monitored-battery = <&battery>;
 };
 
 &pmi8998_rradc {
