aosp.config: add android-mainline config

--- a/arch/arm64/configs/aosp.config
+++ b/arch/arm64/configs/aosp.config
@@ -33,6 +33,16 @@ CONFIG_FW_LOADER_USER_HELPER=y
 # SELinux
 CONFIG_LSM="selinux"
 
+#android-mainline specific stuff
+CONFIG_DM_USER=m
+CONFIG_CPU_FREQ_TIMES=y
+CONFIG_USB_CONFIGFS_UEVENT=y
+CONFIG_USB_CONFIGFS_F_ACC=y
+CONFIG_VIRTIO_DMA_SHARED_BUFFER=m
+CONFIG_ASHMEM=y
+CONFIG_ANDROID_DEBUG_KINFO=y
+CONFIG_INCREMENTAL_FS=y
+
 # CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
 # CONFIG_ANDROID_PARANOID_NETWORK is not set
 # CONFIG_BPFILTER is not set
